# Llukas

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-desktop.txt  requirements.txt
.devcontainer/: devcontainer.json
config/: config.yaml
docker/: Dockerfile
docs/: backtesting.md  configuration.md  deployment.md  faq.md  installation.md  scanner.md  strategies.md
scripts/: install_autostart.ps1  uninstall_autostart.ps1
tests/: conftest.py  mocks.py
tests/integration/: test_engine_integration.py
tests/unit/: test_backtesting.py  test_core.py  test_data.py  test_database.py  test_execution.py  test_indicators.py  test_monitoring.py  test_paper_exchange.py  test_risk.py  test_scanner.py  test_strategies.py
tradingbot/: __init__.py  cli.py  tray_app.py
tradingbot/analytics/: __init__.py  indicators.py  performance.py
tradingbot/backtesting/: __init__.py  engine.py  optimizer.py
tradingbot/core/: __init__.py  config.py  engine.py  enums.py  events.py  exceptions.py  logging.py  models.py
tradingbot/dashboard/: __init__.py  app.py  scanner_app.py
tradingbot/data/: __init__.py  downloader.py  resampler.py  storage.py  stream.py
tradingbot/database/: __init__.py  models.py  repository.py
tradingbot/exchange/: __init__.py  base.py  ccxt_adapter.py  factory.py  paper.py
tradingbot/execution/: __init__.py  engine.py  order_manager.py
tradingbot/monitoring/: __init__.py  notifier.py
tradingbot/risk/: __init__.py  manager.py  sizing.py
tradingbot/scanner/: __init__.py  data_provider.py  detector.py  (+5 more)
(+21 files in other folders)
