[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbot"
version = "1.0.0"
description = "Professional modular algorithmic trading bot with live trading, paper trading, backtesting and optimization."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TradingBot Team" }]
dependencies = [
    "ccxt>=4.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
    "SQLAlchemy>=2.0.30",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "pyarrow>=16.0.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
]
postgres = [
    "psycopg2-binary>=2.9.9",
]
desktop = [
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
tradingbot = "tradingbot.cli:main"

[tool.setuptools.packages.find]
include = ["tradingbot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
